--- a/2021.10.23 („Baltagul” de Mihail Sadoveanu)/Eseu roman interbelic realist mitic/Eseu_roman_interbelic_realist_mitic.tex
+++ b/2021.10.23 („Baltagul” de Mihail Sadoveanu)/Eseu roman interbelic realist mitic/Eseu_roman_interbelic_realist_mitic.tex
@@ -26,7 +26,7 @@ Romanul este o creație epică în proză, de mari dimensiuni, cu acțiune compl
 \marginnote{aspectul realist}[0.3cm]
 Romanul este realizat pe două coordonate fundamentale: aspectul realist (monografia lumii pastorale, reperele spațiale, tipologia personajelor, tehnica detaliului semnificativ) și aspectul mitic (gesturile rituale ale Vitoriei, tradițiile pastorale, motivul comuniunii om-natură și mitul marii treceri).
 
-Inspirația romanului din balada populară \textbfit{„Miorița”}, sugerată chiar de scriitor prin mottoul \textit{„Stăpâne, stăpâne, / Mai chiamă ș-un câne...”}, constituie un aspect controversat în receptarea critică, susținut de criticii interbelici și adesea contestat de exegeza postbelică.
+Inspirația romanului din balada populară \textbfit{„Miorița”}, sugerată chiar de scriitor prin mottoul \textit{„Stăpâne, stăpâne, / Mai chiamă ș-un câne...”}, constituie un aspect controversat în receptarea critică, susținut de criticii interbelici (E. Lovinescu, G. Călinescu) și adesea contestat de exegeza postbelică (Al. Paleologu).
 
 
 \section{Prezentarea temelor romanului studiat}
@@ -92,7 +92,7 @@ Personajul principal este Vitoria Lipan, femeia voluntară, munteanca, soție de
 Aparținând lumii arhaice, patriarhale, Vitoria transmite copiilor respectul tradițiilor și este refractară la noutățile civilizației: \textit{„În tren ești olog, mut și chior”}. Ca mamă, îi interzice Minodorei să se îndepărteze de tradiție (\textit{„Îți arăt eu coc, valț și bluză...! Nici eu, nici bunică-ta, nici bunică-mea n-am știut de acestea -- și-n legea noastră trebuie să trăiești și tu!”}) și contribuie prin călătorie la maturizarea lui Gheorghiță. Respectă obiceiurile de cumetrie, de nuntă și de înmormântare.
 
 \marginnote{tehnica basoreliefului}[-0.1cm]
-Personajul complex este realizat prin tehnica basoreliefului și individualizat prin caracterizare directă și indirectă.Portretul fizic relevă frumusețea personajului prin tehnica detaliului semnificativ.
+Personajul complex este realizat prin tehnica basoreliefului și individualizat prin caracterizare directă și indirectă. Portretul fizic relevă frumusețea personajului prin tehnica detaliului semnificativ.
 
 \marginnote{personajul secundar}[0.2cm]
 Personajul secundar, Gheorghiță, reprezintă generația tânără, care trebuie să ia locul tatălui dispărut. Romanul poate fi considerat inițiatic, deoarece prezintă drumul spre maturizarea lui Gheorghiță.
