--- a/2021.11.13 („Ultima noapte de dragoste, întâia noapte de război” de Camil Petrescu)/Eseu roman psihologic/Eseu_roman_psihologic.tex
+++ b/2021.11.13 („Ultima noapte de dragoste, întâia noapte de război” de Camil Petrescu)/Eseu roman psihologic/Eseu_roman_psihologic.tex
@@ -1,73 +1,41 @@
-%%
-%% Basic LaTeX template by Andy3153
-%% created   04/10/21 ~ 18:21:32
-%% modified1 15/10/21 ~ 23:15:05
-%% modified2 03/11/21 ~ 18:37:45
-%%
+% Include the preamble
+\input{../../preamble.tex}
 
-% Document preamble
-\documentclass[
-12pt,                        % Font size
-a4paper                      % Paper type
-]{article}
+\newcommand{\operatitle}{\textbfit{„Ultima noapte de dragoste, întâia noapte de război”}} % title of the text
+\newcommand{\operaauthor}{Camil Petrescu} % author of the text
 
-% Packages
-\usepackage[
-margin=2.7cm,                % Margin size
-marginparwidth=2cm,          % Margin note size
-marginparsep=3mm             % Space between margin and text
-]{geometry}
-\usepackage[utf8]{inputenc}  % UTF-8 support
-\usepackage[T1]{fontenc}     % Proper hyphenation
-\usepackage[romanian]{babel} % Romanian characters support
-\usepackage{indentfirst}     % Add paragraph indentation even after a section
-\usepackage{marginnote}      % Notes on the margins of a document (more advanced \marginpar)
-\usepackage{titlesec}        % Customize titles
-
-% Custom titles, sections, subsections etc. format
-\titleformat*{\section}{\large\bfseries}
-\titleformat{\subsection}{\normalfont\normalfont\bfseries}{}{0pt}{}
-
-% Page numbering
-%\pagenumbering{gobble} % uncomment if you want to disable it
-
-% Custom commands
-% Format: \newcommand{\command}{action (add '\ ' or '{}' if it won't add a space properly)}
-\newcommand{\rom}[1]{\uppercase\expandafter{\romannumeral #1\relax}} % Roman numerals
-\newcommand{\operatitle}{\textbf{\textit{„Ultima noapte de dragoste, întâia noapte de război”\ }}} % title of the commented opera
-\newcommand{\operaauthor}{Camil Petrescu\ } % author of the commented opera
-
-% Basic document info
 \title{Eseu cu privire la tema și viziunea despre lume dintr-un roman psihologic studiat}
-\date{}   % Show no date in the title
-\author{} % Empty author to not get a warn about missing author
+
 
 \begin{document}
 \maketitle % Show the title
 %\reversemarginpar % put margin notes on left instead of on right
 
-
 % Beginning of text
+
 
 \subsection{Context}
 
-\operaauthor ilustrează estetica autenticității în studiile teoretice și în romanele sale (\operatitle 1930; \textbf{\textit{„Patul lui Procust”}} 1933).
+\operaauthor\ ilustrează estetica autenticității în studiile teoretice în romanele sale (\operatitle, 1930; \textbfit{„Patul lui Procust”}, 1933).
+
 
 \section{Încadrarea romanului studiat într-o tipologie, într-un curent cultural/literar, într-o orientare tematică}
 
 \marginnote{tipologie}[1.3cm]
-\operatitle este un roman modern, psihologic, de tip subiectiv, care ilustrează afirmațiile pe care Camil Petrescu le va face mai târziu în conferința citată. Romanul are drept caracteristici: unicitatea perspectivei narative, timpul prezent și subiectiv, raportul dintre timpul cronologic și timpul psihologic, fluxul conștiinței, memoria afectivă (involuntară), narațiunea la persoana \rom{1}, luciditatea (auto)analizei, anticalofilismul, dar și autenticitatea trăirii.
+\operatitle\ este un roman modern, psihologic, de tip subiectiv, care ilustrează afirmațiile pe care Camil Petrescu le va face mai târziu în conferința citată. Romanul are drept caracteristici: unicitatea perspectivei narative, timpul prezent și subiectiv, raportul dintre timpul cronologic și timpul psihologic, fluxul conștiinței, memoria afectivă (involuntară), narațiunea la persoana \rom{1}, luciditatea (auto)analizei, anticalofilismul, dar și autenticitatea trăirii.
+
 
 \section{Ilustrarea temei romanului prin episoade/citate/secvențe comentate}
 
 \marginnote{temă, structură, titlu}[1.8cm]
-Textul narativ este structurat în două părți precizate în titlu, care indică temele romanului și, în același timp, cele două experiențe fundamentale de cunoaștere trăite de protagonist: dragostea și războiul. Dacă prima parte reprezintă rememorarea iubirii matrimoniale eșuate dintre Ștefan Gheorghidiu și Ela, partea a doua, construită sub forma jurnalului de campanie al lui Gheorghidiu, urmărește experiența de pe front, în timpul Primului Război Mondial. Prima parte este în întregime ficțională, în timp ce a doua valorifică jurnalul de campanie al autorului, ceea ce conferă autenticitatea textului.
+Textul narativ este structurat în două părți precizate în titlu, care indică temele romanului și, în același timp, cele două experiențe fundamentale de cunoaștere trăite de protagonist: dragostea și războiul. Dacă prima parte reprezintă rememorarea iubirii matrimoniale eșuate dintre Ștefan Gheorghidiu și Ela, partea a doua, construită sub forma jurnalului de campanie al lui Gheorghidiu, urmărește experiența de pe front, în timpul Primului Război Mondial. Prima parte este în întregime ficțională, în timp ce a doua valorifică jurnalul de campanie al autorului, ceea ce conferă autenticitate textului.
 
 Romanul debutează printr-un artificiu compozițional: acțiunea primului capitol, \textit{„La Piatra Craiului, în munte”}, este posterioară întâmplărilor relatate în restul \textit{„Cărții \rom{1}”}. Capitolul scoate în evidență cele două planuri temporale din discursul narativ: timpul narării (prezentul frontului) și timpul narat (trecutul poveștii de iubire). În primăvara lui 1916, în timpul unei concentrări pe Valea Prahovei, Gheorghidiu asistă la popota ofițerilor la o discuție despre dragoste și fidelitate, pornind de la un fapt divers aflat din presă: un bărbat care și-a ucis soția infidelă a fost achitat la tribunal. Această discuție declanșează memoria afectivă a protagonistului, trezindu-i amintirile legate de cei doi ani și jumătate de căsnicie cu Ela.
 
 Întocmai ca la Proust, un eveniment exterior declanșează rememorarea unor întâmplări sau stări trăite într-un timp trecut.
 
-\section{Prezentarea elementelor de structură și de compoziție ale textului narativ, semnificative pentru tema și viziunea despre lume din romanul studiat {\footnotesize (de exemplu: acțiune, conflict, relații temporale și spațiale, incipit, final, tehnici narative, perspectivă narativă, registre stilistice, limbajul personajelor etc.)}}
+
+\section{Prezentarea elementelor de structură și de compoziție ale textului narativ, semnificative pentru tema și viziunea despre lume din romanul studiat {\footnotesize\normalfont(de exemplu: acțiune, conflict, relații temporale și spațiale, incipit, final, tehnici narative, perspectivă narativă, registre stilistice, limbajul personajelor etc.)}}
 
 \marginnote{incipit, final deschis}[0.8cm]
 Chiar dacă este vorba de un roman modern, în incipit sunt fixate cu precizie realizată coordonatele spațio-temporale: \textit{„În primăvara anului 1916,} [...] \textit{între Bușteni și Predeal.”} În schimb, finalul deschis lasă loc interpretărilor multiple, așa cum se întâmplă în general în proza de analiză psihologică. Astfel, Gheorghidiu, obosit să mai caute certitudini și să se mai îndoiască, se simte detașat de tot ceea ce îl legase de Ela și hotărăște să o părăsească, să-i lase \textit{„tot trecutul.”}
@@ -78,7 +46,7 @@ Acest conflict interior este generat de raporturile pe care protagonistul le are
 
 Conflictul interior este dublat de un conflict exterior generat de relația protagonistului cu societatea, acesta fiind plasat în categoria inadaptaților social.
 
-\marginnote{perspectiva narativă}[0.3cm]
+\marginnote{perspectiva narativă}[0.1cm]
 Romanul este scris la persoana \rom{1}, sub forma unei confesiuni a personajului principal, Ștefan Gheorghidiu, care trăiește două experiențe fundamentale: iubirea și războiul. Relatarea la persoana \rom{1} conferă autenticitate și caracter subiectiv textului.
 
 Romanul este alcătuit din două părți și treisprezece capitole cu titluri sugestive.
@@ -86,13 +54,13 @@ Romanul este alcătuit din două părți și treisprezece capitole cu titluri su
 \marginnote{structura, acțiunea}[0.3cm]
 \textit{„Eram însurat de doi ani și jumătate cu o colegă de la Universitate și bănuiam că mă înșală”} este fraza prin care debutează abrupt cel de-al doilea capitol, dar și retrospectiva iubirii dintre Ștefan Gheorghidiu și Ela. Tânărul, pe atunci student la Filosofie, se căsătorește din dragoste cu Ela, studentă la Litere, orfană crescută de o mătușă. Iubirea bărbatului se naște din admirație, din duioșie, dar mai ales din orgoliu, fiindcă Ela era cea mai frumoasă și cea mai populară studentă de la Universitate, iar faptul că era îndrăgostită de Ștefan trezea admirația și invidia colegilor.
 
-După căsătorie, cei doi soți trăiesc modest, dar sunt fericiți. Echilibrul tinerei familii este tulburat de o moștenire pe care Gheorghidiu o primește de la moartea unchiului său, Tache. Ela se implică în discuțiile despre bani, lucru care lui Gheorghidiu îi displace profund: \textit{„Aș fi vrut-o mereu feminină, deasupra acestor discuții vulgare”}. Mai mult, spre deosebire de soțul său, se pare că Ela era atrasă de viața modernă, la care are acces datorită noului statut social al familiei. Cuplul evoluează spre o inevitabilă criză matrimonială, declanșată cu ocazia excursiei de la Odobești, când Ela pare să-i acorde o atenție exagerată unui anume domn G., \textit{„vag avocat”} și dansator monden. Acesta din urmă, crede personajul-narator, îi va deveni mai târziu amant.
+După căsătorie, cei doi soți trăiesc modest, dar sunt fericiți. Echilibrul tinerei familii este tulburat de o moștenire pe care Gheorghidiu o primește de la moartea unchiului său, Tache. Ela se implică în discuțiile despre bani, lucru care lui Gheorghidiu îi displace profund: \textit{„Aș fi vrut-o mereu feminină, deasupra acestor discuții vulgare”}. Mai mult, spre deosebire de soțul său, se pare că Ela era atrasă de viața mondenă, la care are acces datorită noului statut social al familiei. Cuplul evoluează spre o inevitabilă criză matrimonială, declanșată cu ocazia excursiei de la Odobești, când Ela pare să-i acorde o atenție exagerată unui anume domn G., \textit{„vag avocat”} și dansator monden. Acesta din urmă, crede personajul-narator, îi va deveni mai târziu amant.
 
 După excursia de la Odobești, relația lor devine o succesiune de separări și împăcări.
 
 \clearpage
 
-Concentrat pe valea Prahovei, unde așteaptă intrarea României în război, Gheorghidiu primește o scrisoare de la Ela prin care aceasta îl cheamă urgent la Câmpulung, unde se mutate pentru a fi mai aproape de el. Soția vrea să-l convingă să treacă o sumă de bani pe numele ei pentru a fi asigurată din punct de vedere financiar în cazul morții lui pe front. Aflând ce-și dorește Ela, Gheorghidiu e convins că ea plănuiește divorțul pentru a rămâne cu domnul G. Întâlnindu-l pe domnul G., protagonistul crede că acesta nu se află întâmplător la Câmpulung și că a venit acolo pentru a fi alături de Ela. Din cauza izbucnirii războiului, Ștefan nu mai are ocazia să verifice dacă soția îl înșală sau nu.
+Concentrat pe valea Prahovei, unde așteaptă intrarea României în război, Gheorghidiu primește o scrisoare de la Ela prin care aceasta îl cheamă urgent la Câmpulung, unde se mutase pentru a fi mai aproape de el. Soția vrea să-l convingă să treacă o sumă de bani pe numele ei pentru a fi asigurată din punct de vedere financiar în cazul morții lui pe front. Aflând ce-și dorește Ela, Gheorghidiu e convins că ea plănuiește divorțul pentru a rămâne cu domnul G. Întâlnindu-l pe domnul G., protagonistul crede că acesta nu se află întâmplător la Câmpulung și că a venit acolo pentru a fi alături de Ela. Din cauza izbucnirii războiului, Ștefan nu mai are ocazia să verifice dacă soția îl înșală sau nu.
 
 A doua experiență în planul cunoașterii existențiale o reprezintă războiul, care pune în umbră experiența iubirii. Frontul înseamnă haos, mizerie, măsuri absurde, învălmășeală, dezordine, ordine contradictorii. Din cauza informațiilor eronate, artileria română își fixează tunurile asupra propriilor batalioane.
 
@@ -103,15 +71,16 @@ Rănit și spitalizat, Gheorghidiu revine acasă, la București, dar se simte de
 Cum sfârșitul lasă loc interpretărilor multiple, se poate considera că romanul are un final deschis.
 
 \marginnote{personajele}[0.3cm]
-Personajul-narator, Ștefan Gheorghidiu, reprezintă tipul intelectualului lucid, inadaptatul superior. Filosof, el are impresia că s-a izolat de lumea exterioară, însă, în realitate, evenimentele exterioare sunt filtrate prin conștiința sa. Ela, personajul feminin al romanului, este prezentată doar din perspectiva lui Gheorghidiu. De aceea, cititorul nu se poate pronunța asupra fidelității ei și nici nu poate opina dacă e mai degrabă superficială decât spirituală. \textit{„Nu Ela se schimbă, ci felul în care o vede Ștefan”}.
+Personajul-narator, Ștefan Gheorghidiu, reprezintă tipul intelectualului lucid, inadaptatul superior. Filosof, el are impresia că s-a izolat de lumea exterioară, însă, în realitate, evenimentele exterioare sunt filtrate prin conștiința sa. Ela, personajul feminin al romanului, este prezentată doar din perspectiva lui Gheorghidiu. De aceea cititorul nu se poate pronunța asupra fidelității ei și nici nu poate opina dacă e mai degrabă superficială decât spirituală. \textit{„Nu Ela se schimbă, ci felul în care o vede Ștefan”}.
 
-\marginnote{tehnici ale analizei psihologice}[-0.6cm]
-Prin introspecție și monolog interior -- tehnici ale analizei psihologice --  Ștefan Gheorghidiu își analizează cu luciditate trăirile, stările și sentimentele.
+\marginnote{tehnici ale analizei psihologice}[-1.5cm]
+Prin introspecție și monolog interior -- tehnici ale analizei psihologice --  Ștefan \hbox{Gheorghidiu} își analizează cu luciditate trăirile, stările și sentimentele.
 
-\marginnote{stilul anticalofil}[0.1cm]
+\marginnote{stilul anticalofil}[-0.1cm]
 Stilul anticalofil („împotriva scrisului frumos”) susține autenticitatea limbajului.
+
 
 \subsection{Concluzie}
 
-\operatitle este un roman psihologic modern, având drept caracteristici: unicitatea perspectivei narative, relatarea la persoana \rom{1}, la timpul prezent, subiectivitatea, apelul la memoria afectivă și autenticitatea trăirii.
+\operatitle\ este un roman psihologic modern, având drept caracteristici: unicitatea perspectivei narative, relatarea la persoana \rom{1}, la timpul prezent, subiectivitatea, apelul la memoria afectivă și autenticitatea trăirii.
 \end{document}
