testing with book layout

--- a/preamble.tex
+++ b/preamble.tex
@@ -74,11 +74,9 @@
 % Format: \newcommand{\command}[variable]{action #variable}
 \newcommand{\rom}[1]{\uppercase\expandafter{\romannumeral #1\relax}} % Roman numerals
 \newcommand{\textbfit}[1]{\textbf{\textit{#1}}}                      % combine bold and italic
-\newcommand{\largertext}[1]{
- \vspace{0.0cm}
- \normalfont\textbf{#1}
- \vspace{0.25cm}
-} % kinda larger text and bolded
+\newcommand{\operatitle}{}                                           % to not get errors
+\newcommand{\operaauthor}{}                                          % to not get errors
+
 
 
 % Customize \marginnote font
