--- a/2021.11.13 („Ultima noapte de dragoste, întâia noapte de război” de Camil Petrescu)/Eseu roman psihologic/Eseu_roman_psihologic.tex
+++ b/2021.11.13 („Ultima noapte de dragoste, întâia noapte de război” de Camil Petrescu)/Eseu roman psihologic/Eseu_roman_psihologic.tex
@@ -1,86 +1,9 @@
 % Include the preamble
 \input{../../preamble.tex}
 
-\newcommand{\operatitle}{\textbfit{„Ultima noapte de dragoste, întâia noapte de război”}} % title of the text
-\newcommand{\operaauthor}{Camil Petrescu} % author of the text
-
 \title{Eseu cu privire la tema și viziunea despre lume dintr-un roman psihologic studiat}
 
-
 \begin{document}
-\maketitle % Show the title
-%\reversemarginpar % put margin notes on left instead of on right
-
-% Beginning of text
-
-
-\subsection{Context}
-
-\operaauthor\ ilustrează estetica autenticității în studiile teoretice în romanele sale (\operatitle, 1930; \textbfit{„Patul lui Procust”}, 1933).
-
-
-\section{Încadrarea romanului studiat într-o tipologie, într-un curent cultural/literar, într-o orientare tematică}
-
-\marginnote{tipologie}[1.3cm]
-\operatitle\ este un roman modern, psihologic, de tip subiectiv, care ilustrează afirmațiile pe care Camil Petrescu le va face mai târziu în conferința citată. Romanul are drept caracteristici: unicitatea perspectivei narative, timpul prezent și subiectiv, raportul dintre timpul cronologic și timpul psihologic, fluxul conștiinței, memoria afectivă (involuntară), narațiunea la persoana \rom{1}, luciditatea (auto)analizei, anticalofilismul, dar și autenticitatea trăirii.
-
-
-\section{Ilustrarea temei romanului prin episoade/citate/secvențe comentate}
-
-\marginnote{temă, structură, titlu}[1.8cm]
-Textul narativ este structurat în două părți precizate în titlu, care indică temele romanului și, în același timp, cele două experiențe fundamentale de cunoaștere trăite de protagonist: dragostea și războiul. Dacă prima parte reprezintă rememorarea iubirii matrimoniale eșuate dintre Ștefan Gheorghidiu și Ela, partea a doua, construită sub forma jurnalului de campanie al lui Gheorghidiu, urmărește experiența de pe front, în timpul Primului Război Mondial. Prima parte este în întregime ficțională, în timp ce a doua valorifică jurnalul de campanie al autorului, ceea ce conferă autenticitate textului.
-
-Romanul debutează printr-un artificiu compozițional: acțiunea primului capitol, \textit{„La Piatra Craiului, în munte”}, este posterioară întâmplărilor relatate în restul \textit{„Cărții \rom{1}”}. Capitolul scoate în evidență cele două planuri temporale din discursul narativ: timpul narării (prezentul frontului) și timpul narat (trecutul poveștii de iubire). În primăvara lui 1916, în timpul unei concentrări pe Valea Prahovei, Gheorghidiu asistă la popota ofițerilor la o discuție despre dragoste și fidelitate, pornind de la un fapt divers aflat din presă: un bărbat care și-a ucis soția infidelă a fost achitat la tribunal. Această discuție declanșează memoria afectivă a protagonistului, trezindu-i amintirile legate de cei doi ani și jumătate de căsnicie cu Ela.
-
-Întocmai ca la Proust, un eveniment exterior declanșează rememorarea unor întâmplări sau stări trăite într-un timp trecut.
-
-
-\section{Prezentarea elementelor de structură și de compoziție ale textului narativ, semnificative pentru tema și viziunea despre lume din romanul studiat {\footnotesize\normalfont(de exemplu: acțiune, conflict, relații temporale și spațiale, incipit, final, tehnici narative, perspectivă narativă, registre stilistice, limbajul personajelor etc.)}}
-
-\marginnote{incipit, final deschis}[0.8cm]
-Chiar dacă este vorba de un roman modern, în incipit sunt fixate cu precizie realizată coordonatele spațio-temporale: \textit{„În primăvara anului 1916,} [...] \textit{între Bușteni și Predeal.”} În schimb, finalul deschis lasă loc interpretărilor multiple, așa cum se întâmplă în general în proza de analiză psihologică. Astfel, Gheorghidiu, obosit să mai caute certitudini și să se mai îndoiască, se simte detașat de tot ceea ce îl legase de Ela și hotărăște să o părăsească, să-i lase \textit{„tot trecutul.”}
-
-În romanul lui Camil Petrescu, apare conflictul interior, din conștiința personajului narator, Ștefan Gheorghidiu, care trăiește stări și sentimente contradictorii față de soția sa, Ela.
-\marginnote{conflict}[0.3cm]
-Acest conflict interior este generat de raporturile pe care protagonistul le are cu realitatea înconjurătoare. Principalul motiv al rupturii dintre Ștefan și soția sa este implicarea Elei în lumea mondenă, pe care eroul o disprețuiește. Așadar, conflictul interior se produce din cauza diferenței dintre aspirațiile lui Gheorghidiu și realitatea lumii înconjurătoare.
-
-Conflictul interior este dublat de un conflict exterior generat de relația protagonistului cu societatea, acesta fiind plasat în categoria inadaptaților social.
-
-\marginnote{perspectiva narativă}[0.1cm]
-Romanul este scris la persoana \rom{1}, sub forma unei confesiuni a personajului principal, Ștefan Gheorghidiu, care trăiește două experiențe fundamentale: iubirea și războiul. Relatarea la persoana \rom{1} conferă autenticitate și caracter subiectiv textului.
-
-Romanul este alcătuit din două părți și treisprezece capitole cu titluri sugestive.
-
-\marginnote{structura, acțiunea}[0.3cm]
-\textit{„Eram însurat de doi ani și jumătate cu o colegă de la Universitate și bănuiam că mă înșală”} este fraza prin care debutează abrupt cel de-al doilea capitol, dar și retrospectiva iubirii dintre Ștefan Gheorghidiu și Ela. Tânărul, pe atunci student la Filosofie, se căsătorește din dragoste cu Ela, studentă la Litere, orfană crescută de o mătușă. Iubirea bărbatului se naște din admirație, din duioșie, dar mai ales din orgoliu, fiindcă Ela era cea mai frumoasă și cea mai populară studentă de la Universitate, iar faptul că era îndrăgostită de Ștefan trezea admirația și invidia colegilor.
-
-După căsătorie, cei doi soți trăiesc modest, dar sunt fericiți. Echilibrul tinerei familii este tulburat de o moștenire pe care Gheorghidiu o primește de la moartea unchiului său, Tache. Ela se implică în discuțiile despre bani, lucru care lui Gheorghidiu îi displace profund: \textit{„Aș fi vrut-o mereu feminină, deasupra acestor discuții vulgare”}. Mai mult, spre deosebire de soțul său, se pare că Ela era atrasă de viața mondenă, la care are acces datorită noului statut social al familiei. Cuplul evoluează spre o inevitabilă criză matrimonială, declanșată cu ocazia excursiei de la Odobești, când Ela pare să-i acorde o atenție exagerată unui anume domn G., \textit{„vag avocat”} și dansator monden. Acesta din urmă, crede personajul-narator, îi va deveni mai târziu amant.
-
-După excursia de la Odobești, relația lor devine o succesiune de separări și împăcări.
-
-\clearpage
-
-Concentrat pe valea Prahovei, unde așteaptă intrarea României în război, Gheorghidiu primește o scrisoare de la Ela prin care aceasta îl cheamă urgent la Câmpulung, unde se mutase pentru a fi mai aproape de el. Soția vrea să-l convingă să treacă o sumă de bani pe numele ei pentru a fi asigurată din punct de vedere financiar în cazul morții lui pe front. Aflând ce-și dorește Ela, Gheorghidiu e convins că ea plănuiește divorțul pentru a rămâne cu domnul G. Întâlnindu-l pe domnul G., protagonistul crede că acesta nu se află întâmplător la Câmpulung și că a venit acolo pentru a fi alături de Ela. Din cauza izbucnirii războiului, Ștefan nu mai are ocazia să verifice dacă soția îl înșală sau nu.
-
-A doua experiență în planul cunoașterii existențiale o reprezintă războiul, care pune în umbră experiența iubirii. Frontul înseamnă haos, mizerie, măsuri absurde, învălmășeală, dezordine, ordine contradictorii. Din cauza informațiilor eronate, artileria română își fixează tunurile asupra propriilor batalioane.
-
-Capitulul \textit{„Ne-a acoperit pământul lui Dumnezeu”} înfățișează imaginea apocaliptică a războiului. Omul mai păstrează doar instinctul de supraviețuire și automatismul, după cum remarcă însuși Gheorghidiu: \textit{„Nu mai e nimic omenesc în noi.”}
-
-Rănit și spitalizat, Gheorghidiu revine acasă, la București, dar se simte detașat de tot ceea ce îl legase de Ela. De aceea, hotărăște să o părăsească și să-i lase \textit{„tot trecutul”}.
-
-Cum sfârșitul lasă loc interpretărilor multiple, se poate considera că romanul are un final deschis.
-
-\marginnote{personajele}[0.3cm]
-Personajul-narator, Ștefan Gheorghidiu, reprezintă tipul intelectualului lucid, inadaptatul superior. Filosof, el are impresia că s-a izolat de lumea exterioară, însă, în realitate, evenimentele exterioare sunt filtrate prin conștiința sa. Ela, personajul feminin al romanului, este prezentată doar din perspectiva lui Gheorghidiu. De aceea cititorul nu se poate pronunța asupra fidelității ei și nici nu poate opina dacă e mai degrabă superficială decât spirituală. \textit{„Nu Ela se schimbă, ci felul în care o vede Ștefan”}.
-
-\marginnote{tehnici ale analizei psihologice}[-1.5cm]
-Prin introspecție și monolog interior -- tehnici ale analizei psihologice --  Ștefan \hbox{Gheorghidiu} își analizează cu luciditate trăirile, stările și sentimentele.
-
-\marginnote{stilul anticalofil}[-0.1cm]
-Stilul anticalofil („împotriva scrisului frumos”) susține autenticitatea limbajului.
-
-
-\subsection{Concluzie}
-
-\operatitle\ este un roman psihologic modern, având drept caracteristici: unicitatea perspectivei narative, relatarea la persoana \rom{1}, la timpul prezent, subiectivitatea, apelul la memoria afectivă și autenticitatea trăirii.
+ \maketitle % Show the title
+ \input{content.tex}
 \end{document}
